GStreamer-CRITICAL: Padname src_0 is not unique in element multiqueue0, not adding
Terminal output for GST_DEBUG_FILE=gst.log G_DEBUG=fatal_warnings GST_DEBUG=4 gst-play-1.0 --use-playbin3 pluck.wav pluck.wav pluck.wav
:
Press 'k' to see a list of keyboard shortcuts.
Now playing /home/rt/gstreamer_testing/pluck.wav
Redistribute latency...
Redistribute latency...
0:00:01.2 / 0:00:01.2
Now playing /home/rt/gstreamer_testing/pluck.wav
Prerolling...
(gst-play-1.0:3444341): GStreamer-CRITICAL **: 17:36:55.438: Padname src_0 is not unique in element multiqueue0, not adding
Stack traces:
>>> info threads
Id Target Id Frame
* 1 Thread 0x7f7560f79700 (LWP 3444598) _g_log_abort (breakpoint=1) at ../../../glib/gmessages.c:554
2 Thread 0x7f757b278700 (LWP 3444356) syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
3 Thread 0x7f757a6d1700 (LWP 3444357) syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
4 Thread 0x7f757b97cb80 (LWP 3444341) 0x00007f757bcd099f in __GI___poll (fds=0x56425fdfddb0, nfds=3, timeout=39) at ../sysdeps/unix/sysv/linux/poll.c:29
5 Thread 0x7f7561cb8700 (LWP 3444390) syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
6 Thread 0x7f7579ed0700 (LWP 3444361) syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
7 Thread 0x7f75477fe700 (LWP 3444413) syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
8 Thread 0x7f7547fff700 (LWP 3444399) syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
>>> thread 1
[Switching to thread 1 (Thread 0x7f7560f79700 (LWP 3444598))]
#0 _g_log_abort (breakpoint=1) at ../../../glib/gmessages.c:554
554 in ../../../glib/gmessages.c
>>> bt
#0 _g_log_abort (breakpoint=1) at ../../../glib/gmessages.c:554
#1 0x00007f757bfb8579 in g_logv (log_domain=0x7f757c2e7c06 "GStreamer", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7f7560f78360) at ../../../glib/gmessages.c:1373
#2 0x00007f757bfb8743 in g_log (log_domain=<optimized out>, log_level=<optimized out>, format=<optimized out>) at ../../../glib/gmessages.c:1415
#3 0x00007f757c22a826 in gst_element_add_pad (element=0x56425fdf2000 [GstMultiQueue], pad=0x7f755c03b1e0 [GstMultiQueuePad]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstelement.c:807
#4 0x00007f757b2be84d in gst_single_queue_new (mqueue=0x56425fdf2000 [GstMultiQueue], id=4294967295) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/plugins/elements/gstmultiqueue.c:3591
#5 0x00007f757b2b3654 in gst_multi_queue_request_new_pad (element=0x56425fdf2000 [GstMultiQueue], temp=0x56425fdd8720 [GstPadTemplate], name=0x0, caps=0x0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/plugins/elements/gstmultiqueue.c:1203
#6 0x00007f757c22b714 in _gst_element_request_pad (element=0x56425fdf2000 [GstMultiQueue], templ=0x56425fdd8720 [GstPadTemplate], name=0x0, caps=0x0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstelement.c:1177
#7 0x00007f757c22b994 in gst_element_request_pad_simple (element=0x56425fdf2000 [GstMultiQueue], name=0x7f757b396ff0 "sink_%u") at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstelement.c:1272
#8 0x00007f757b32b23b in create_new_slot (dbin=0x56425fdda030 [GstDecodebin3], type=GST_STREAM_TYPE_AUDIO) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gst-plugins-base/gst/playback/gstdecodebin3.c:2124
#9 0x00007f757b32b8ee in get_slot_for_input (dbin=0x56425fdda030 [GstDecodebin3], input=0x7f7554013bb0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gst-plugins-base/gst/playback/gstdecodebin3.c:2219
#10 0x00007f757b323bfa in unblock_pending_input (input=0x56425fdea320) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gst-plugins-base/gst/playback/gstdecodebin3-parse.c:487
#11 0x00007f757b32401c in parsebin_buffer_probe (pad=0x7f756c00cb10 [GstParsePad], info=0x7f7560f789a0, input=0x56425fdea320) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gst-plugins-base/gst/playback/gstdecodebin3-parse.c:533
#12 0x00007f757c25c023 in probe_hook_marshal (hook=0x7f75540134c0, data=0x7f7560f78880) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstpad.c:3661
#13 0x00007f757bfa0996 in g_hook_list_marshal (hook_list=0x7f756c00cba8, may_recurse=1, marshaller=0x7f757c25bd09 <probe_hook_marshal>, data=0x7f7560f78880) at ../../../glib/ghook.c:672
#14 0x00007f757c25c74e in do_probe_callbacks (pad=0x7f756c00cb10 [GstParsePad], info=0x7f7560f789a0, defaultval=GST_FLOW_OK) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstpad.c:3845
#15 0x00007f757c260402 in gst_pad_push_data (pad=0x7f756c00cb10 [GstParsePad], type=4112, data=0x7f756c0095a0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstpad.c:4704
#16 0x00007f757c260dcc in gst_pad_push (pad=0x7f756c00cb10 [GstParsePad], buffer=0x7f756c0095a0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstpad.c:4860
#17 0x00007f757c23b23d in gst_proxy_pad_chain_default (pad=0x7f75700dbd50 [GstProxyPad], parent=0x7f756c00cb10 [GstParsePad], buffer=0x7f756c0095a0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstghostpad.c:127
#18 0x00007f757c25f390 in gst_pad_chain_data_unchecked (pad=0x7f75700dbd50 [GstProxyPad], type=4112, data=0x7f756c0095a0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstpad.c:4450
#19 0x00007f757c26059e in gst_pad_push_data (pad=0x56425fdee640 [GstPad], type=4112, data=0x7f756c0095a0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstpad.c:4731
#20 0x00007f757c260dcc in gst_pad_push (pad=0x56425fdee640 [GstPad], buffer=0x7f756c0095a0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstpad.c:4860
#21 0x00007f757c09827a in gst_wavparse_stream_data (wav=0x7f755c046040 [GstWavParse], flushing=0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gst-plugins-good/gst/wavparse/gstwavparse.c:2173
#22 0x00007f757c09887a in gst_wavparse_loop (pad=0x7f755c03a400 [GstPad]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gst-plugins-good/gst/wavparse/gstwavparse.c:2256
#23 0x00007f757c2a21f7 in gst_task_func (task=0x7f756c009950 [GstTask]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gsttask.c:384
#24 0x00007f757c2a366f in default_func (tdata=0x7f757007f080, pool=0x56425fdf4ec0 [GstTaskPool]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gsttaskpool.c:70
#25 0x00007f757bfdb374 in g_thread_pool_thread_proxy (data=<optimized out>) at ../../../glib/gthreadpool.c:354
#26 0x00007f757bfdaad1 in g_thread_proxy (data=0x7f755c016180) at ../../../glib/gthread.c:807
#27 0x00007f757bb05609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#28 0x00007f757bcdd133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
>>> thread 2
[Switching to thread 2 (Thread 0x7f757b278700 (LWP 3444356))]
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
38 ../sysdeps/unix/sysv/linux/x86_64/syscall.S: No such file or directory.
>>> bt
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1 0x00007f757bffda5c in g_mutex_lock_slowpath (mutex=0x56425fdf2018) at ../../../glib/gthread-posix.c:1458
#2 0x00007f757c22dd05 in gst_element_post_message_default (element=0x56425fdf2000 [GstMultiQueue], message=0x7f7574001b10) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstelement.c:2114
#3 0x00007f757c22dff5 in gst_element_post_message (element=0x56425fdf2000 [GstMultiQueue], message=0x7f7574001b10) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstelement.c:2168
#4 0x00007f757c26610d in do_stream_status (pad=0x7f75700d8330 [GstMultiQueuePad], type=GST_STREAM_STATUS_TYPE_LEAVE, thread=0x56425fdf7640, task=0x56425fdf03b0 [GstTask]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstpad.c:6276
#5 0x00007f757c266195 in pad_leave_thread (task=0x56425fdf03b0 [GstTask], thread=0x56425fdf7640, user_data=0x7f75700d8330) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstpad.c:6292
#6 0x00007f757c2a227c in gst_task_func (task=0x56425fdf03b0 [GstTask]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gsttask.c:397
#7 0x00007f757c2a366f in default_func (tdata=0x56425fdfd540, pool=0x56425fdf4ec0 [GstTaskPool]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gsttaskpool.c:70
#8 0x00007f757bfdb374 in g_thread_pool_thread_proxy (data=<optimized out>) at ../../../glib/gthreadpool.c:354
#9 0x00007f757bfdaad1 in g_thread_proxy (data=0x56425fdf7640) at ../../../glib/gthread.c:807
#10 0x00007f757bb05609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#11 0x00007f757bcdd133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
>>> thread 3
[Switching to thread 3 (Thread 0x7f757a6d1700 (LWP 3444357))]
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
38 in ../sysdeps/unix/sysv/linux/x86_64/syscall.S
>>> bt
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1 0x00007f757bffe623 in g_cond_wait (cond=0x7f75700e32f0, mutex=0x7f75700e32a8) at ../../../glib/gthread-posix.c:1540
#2 0x00007f757c2a211a in gst_task_func (task=0x7f75700e3290 [GstTask]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gsttask.c:369
#3 0x00007f757c2a366f in default_func (tdata=0x56425fdfd5a0, pool=0x56425fdf4ec0 [GstTaskPool]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gsttaskpool.c:70
#4 0x00007f757bfdb374 in g_thread_pool_thread_proxy (data=<optimized out>) at ../../../glib/gthreadpool.c:354
#5 0x00007f757bfdaad1 in g_thread_proxy (data=0x56425fdfb2a0) at ../../../glib/gthread.c:807
#6 0x00007f757bb05609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#7 0x00007f757bcdd133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
>>> thread 4
[Switching to thread 4 (Thread 0x7f757b97cb80 (LWP 3444341))]
#0 0x00007f757bcd099f in __GI___poll (fds=0x56425fdfddb0, nfds=3, timeout=39) at ../sysdeps/unix/sysv/linux/poll.c:29
29 ../sysdeps/unix/sysv/linux/poll.c: No such file or directory.
>>> bt
#0 0x00007f757bcd099f in __GI___poll (fds=0x56425fdfddb0, nfds=3, timeout=39) at ../sysdeps/unix/sysv/linux/poll.c:29
#1 0x00007f757bfb136e in g_main_context_poll (priority=<optimized out>, n_fds=3, fds=0x56425fdfddb0, timeout=<optimized out>, context=0x56425fde7a90) at ../../../glib/gmain.c:4346
#2 g_main_context_iterate (context=0x56425fde7a90, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:4042
#3 0x00007f757bfb16f3 in g_main_loop_run (loop=0x56425fdedfc0) at ../../../glib/gmain.c:4241
#4 0x000056425f729618 in do_play (play=0x56425fde79e0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gst-plugins-base/tools/gst-play.c:846
#5 0x000056425f72be6e in main (argc=1, argv=0x7ffcc9e7dbd8) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gst-plugins-base/tools/gst-play.c:1807
>>> thread 5
[Switching to thread 5 (Thread 0x7f7561cb8700 (LWP 3444390))]
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
38 ../sysdeps/unix/sysv/linux/x86_64/syscall.S: No such file or directory.
>>> bt
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1 0x00007f757bffe623 in g_cond_wait (cond=0x56425fdf0f50, mutex=0x56425fdf0f08) at ../../../glib/gthread-posix.c:1540
#2 0x00007f757c2a211a in gst_task_func (task=0x56425fdf0ef0 [GstTask]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gsttask.c:369
#3 0x00007f757c2a366f in default_func (tdata=0x7f7574005c90, pool=0x56425fdf4ec0 [GstTaskPool]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gsttaskpool.c:70
#4 0x00007f757bfdb374 in g_thread_pool_thread_proxy (data=<optimized out>) at ../../../glib/gthreadpool.c:354
#5 0x00007f757bfdaad1 in g_thread_proxy (data=0x7f757007cc00) at ../../../glib/gthread.c:807
#6 0x00007f757bb05609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#7 0x00007f757bcdd133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
>>> thread 6
[Switching to thread 6 (Thread 0x7f7579ed0700 (LWP 3444361))]
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
38 in ../sysdeps/unix/sysv/linux/x86_64/syscall.S
>>> bt
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1 0x00007f757bffe746 in g_cond_wait_until (cond=cond@entry=0x56425fdf7d78, mutex=mutex@entry=0x56425fdf7d70, end_time=end_time@entry=1479110813277) at ../../../glib/gthread-posix.c:1588
#2 0x00007f757bf81581 in g_async_queue_pop_intern_unlocked (queue=0x56425fdf7d70, wait=wait@entry=1, end_time=1479110813277) at ../../../glib/gasyncqueue.c:422
#3 0x00007f757bf81c21 in g_async_queue_timeout_pop_unlocked (queue=<optimized out>, timeout=timeout@entry=500000) at ../../../glib/gasyncqueue.c:574
#4 0x00007f757bfdb4ca in g_thread_pool_wait_for_new_task (pool=<optimized out>) at ../../../glib/gthreadpool.c:278
#5 g_thread_pool_thread_proxy (data=<optimized out>) at ../../../glib/gthreadpool.c:343
#6 0x00007f757bfdaad1 in g_thread_proxy (data=0x7f757403b460) at ../../../glib/gthread.c:807
#7 0x00007f757bb05609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#8 0x00007f757bcdd133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
>>> thread 7
[Switching to thread 7 (Thread 0x7f75477fe700 (LWP 3444413))]
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
38 in ../sysdeps/unix/sysv/linux/x86_64/syscall.S
>>> bt
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1 0x00007f757bffe623 in g_cond_wait (cond=0x56425fdf0410, mutex=0x56425fdf03c8) at ../../../glib/gthread-posix.c:1540
#2 0x00007f757c2a3331 in gst_task_join (task=0x56425fdf03b0 [GstTask]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gsttask.c:923
#3 0x00007f757c266942 in gst_pad_stop_task (pad=0x7f75700d8330 [GstMultiQueuePad]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstpad.c:6479
#4 0x00007f757b2b3ee8 in gst_single_queue_stop (mq=0x56425fdf2000 [GstMultiQueue], sq=0x7f75700dc400) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/plugins/elements/gstmultiqueue.c:1369
#5 0x00007f757b2bb582 in gst_multi_queue_src_activate_mode (pad=0x7f75700d8330 [GstMultiQueuePad], parent=0x56425fdf2000 [GstMultiQueue], mode=GST_PAD_MODE_PUSH, active=0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/plugins/elements/gstmultiqueue.c:2933
#6 0x00007f757c254380 in activate_mode_internal (pad=0x7f75700d8330 [GstMultiQueuePad], parent=0x56425fdf2000 [GstMultiQueue], mode=GST_PAD_MODE_PUSH, active=0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstpad.c:1213
#7 0x00007f757c253f0a in gst_pad_set_active (pad=0x7f75700d8330 [GstMultiQueuePad], active=0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstpad.c:1111
#8 0x00007f757b2b39f9 in gst_multi_queue_release_pad (element=0x56425fdf2000 [GstMultiQueue], pad=0x7f75700d80e0 [GstMultiQueuePad]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/plugins/elements/gstmultiqueue.c:1260
#9 0x00007f757c22938d in gst_element_release_request_pad (element=0x56425fdf2000 [GstMultiQueue], pad=0x7f75700d80e0 [GstMultiQueuePad]) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstelement.c:370
#10 0x00007f757b32edcd in free_multiqueue_slot (dbin=0x56425fdda030 [GstDecodebin3], slot=0x7f75700d77a0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gst-plugins-base/gst/playback/gstdecodebin3.c:3012
#11 0x00007f757c2322c0 in gst_element_call_async_func (data=0x56425fbed0b0, user_data=0x0) at ../../../../../../../opt/source/GStreamer/gstreamer/subprojects/gstreamer/gst/gstelement.c:3830
#12 0x00007f757bfdb374 in g_thread_pool_thread_proxy (data=<optimized out>) at ../../../glib/gthreadpool.c:354
#13 0x00007f757bfdaad1 in g_thread_proxy (data=0x7f755c016920) at ../../../glib/gthread.c:807
#14 0x00007f757bb05609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#15 0x00007f757bcdd133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
>>> thread 8
[Switching to thread 8 (Thread 0x7f7547fff700 (LWP 3444399))]
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
38 in ../sysdeps/unix/sysv/linux/x86_64/syscall.S
>>> bt
#0 syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1 0x00007f757bffe746 in g_cond_wait_until (cond=cond@entry=0x56425fdf7d78, mutex=mutex@entry=0x56425fdf7d70, end_time=end_time@entry=1479110825784) at ../../../glib/gthread-posix.c:1588
#2 0x00007f757bf81581 in g_async_queue_pop_intern_unlocked (queue=0x56425fdf7d70, wait=wait@entry=1, end_time=1479110825784) at ../../../glib/gasyncqueue.c:422
#3 0x00007f757bf81c21 in g_async_queue_timeout_pop_unlocked (queue=<optimized out>, timeout=timeout@entry=500000) at ../../../glib/gasyncqueue.c:574
#4 0x00007f757bfdb4ca in g_thread_pool_wait_for_new_task (pool=<optimized out>) at ../../../glib/gthreadpool.c:278
#5 g_thread_pool_thread_proxy (data=<optimized out>) at ../../../glib/gthreadpool.c:343
#6 0x00007f757bfdaad1 in g_thread_proxy (data=0x7f755c016120) at ../../../glib/gthread.c:807
#7 0x00007f757bb05609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#8 0x00007f757bcdd133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
GST_DEBUG log: critical_error_padname_src_0_not_unique.log